force-app/main/default/objects/Gift_Aid_Claim__c/Gift_Aid_Claim__c.object-meta.xml
<CustomObject>
    <description>This object is used for linked all gift aid claims against</description>
    <label>Gift Aid Claim</label>
    <nameField>
        <displayFormat>GACID-{000000000}</displayFormat>
        <label>Gift Aid Claim ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Aid Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>