force-app/main/default/objects/Gift_Aid_Claim__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <inlineHelpText>This is the amount received from HMRC</inlineHelpText>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>