force-app/main/default/objects/Gift_Aid_Claim__c/fields/Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount__c</fullName>
    <inlineHelpText>This is the amount within this claim</inlineHelpText>
    <label>Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>