force-app/main/default/objects/Gift_Aid_Claim__c/fields/Claim_end_date__c.field-meta.xml
<CustomField>
    <fullName>Claim_end_date__c</fullName>
    <inlineHelpText>This is the date this claim is to</inlineHelpText>
    <label>Claim end date</label>
    <type>Date</type>
</CustomField>