force-app/main/default/objects/Gift_Aid_Claim__c/fields/Claim_start_date__c.field-meta.xml
<CustomField>
    <fullName>Claim_start_date__c</fullName>
    <defaultValue>today()</defaultValue>
    <inlineHelpText>This is the date this claim is from</inlineHelpText>
    <label>Claim start date</label>
    <type>Date</type>
</CustomField>