force-app/main/default/objects/Gift_Aid_Claim__c/fields/Gift_Aid_Percent__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Percent__c</fullName>
    <defaultValue>$Setup.Gift_Aid_Configuration__c.Gift_Aid_Rate__c</defaultValue>
    <inlineHelpText>This is the current % that is claimable against an income / donation record</inlineHelpText>
    <label>Gift Aid %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>