force-app/main/default/objects/Gift_Aid_Claim__c/fields/Received_date__c.field-meta.xml
<CustomField>
    <fullName>Received_date__c</fullName>
    <inlineHelpText>This is the date you received the money from HMRC</inlineHelpText>
    <label>Received date</label>
    <type>Date</type>
</CustomField>