force-app/main/default/objects/Gift_Aid_Claim__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <inlineHelpText>This is the reference for you HMRC claim</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>