force-app/main/default/objects/Gift_Aid_Claim__c/fields/Submission_date__c.field-meta.xml
<CustomField>
    <fullName>Submission_date__c</fullName>
    <inlineHelpText>This is the date you submitted your claim to HMRC</inlineHelpText>
    <label>Submission date</label>
    <type>Date</type>
</CustomField>